workflow fix+pinot metrics